# aiprogramming

assignment1-llm-game/: CMakeLists.txt
assignment1-llm-game/src/: llm-game.cpp
assignment1-llm-game/src/aipfg/: sdl3-context.hpp  sdl3-sprite-animator.hpp  sdl3-sprite-sheet.hpp  sdl3-typedefs.hpp
